# dagestan

./: .gitignore  Makefile  README.md  demo_memory.json  demo_showcase.py  dev_setup.sh  main.py  memory.json  memory1.json  pyproject.toml  run.py  viz_demo_graph.json  workflow.md
dagestan/: __init__.py  cli.py
dagestan/curation/: curator.py  nightly_curator.py  strategy.py
dagestan/embeddings/: vector_store.py
dagestan/extraction/: extractor.py  prompts.py
dagestan/graph/: __init__.py  operations.py  schema.py  temporal_graph.py
dagestan/retrieval/: hybrid_retriever.py  retriever.py
dagestan/storage/: store.py
docs/: api.md  architecture.md  blueprint.md  checklist.md  contributing.md
evals/: run_ablations.py  run_locomo_eval.py
evals/configs/: ablation.yaml  locomo_gemini_flash.yaml  locomo_openrouter.yaml  smoke_test.yaml
evals/locomo/: download_locomo.py  locomo_dataset.json
evals/results/smoke/20260318_223912/: config.yaml
evals/results/smoke/20260318_224056/: config.yaml
evals/scripts/: baselines.py  dagestan_adapter.py  data_loader.py  event_summarization_eval.py  memory_coherence_eval.py  metrics.py  qa_eval.py
evaluation/: README.md  dagestan_adapter.py  download_locomo.py  locomo_gemini_flash.yaml  memory_coherence_eval.py  metrics.py  qa_eval.py  run_ablations.py  run_locomo_eval.py  smoke_test.yaml
tests/: test_extractor.py  test_hybrid_core.py  test_operations.py  test_retriever.py  test_schema.py  test_temporal_graph.py
viz/: README.md  __init__.py  __main__.py  export.py  generate_demo.py  server.py  watcher.py
viz/static/: app.js  index.html  style.css
