[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagestan"
version = "0.1.0"
description = "Temporal graph memory layer for large language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nabin", email = "nabinoli2004@gmail.com"},
]
keywords = ["llm", "memory", "graph", "temporal", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "loadenv>=0.1.1",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dagestan = "dagestan.cli:main"

[project.urls]
Homepage = "https://github.com/nabin/dagestan"
Repository = "https://github.com/nabin/dagestan"
Issues = "https://github.com/nabin/dagestan/issues"

[tool.setuptools.packages.find]
include = ["dagestan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
